--- a/app.json
+++ b/app.json
@@ -1,5 +1,9 @@
 {
-  "addons": ["heroku-postgresql:standard-0", "newrelic:wayne", "rediscloud:30"],
+  "addons": [
+    "heroku-postgresql:standard-0",
+    "newrelic:wayne",
+    "rediscloud:30"
+  ],
   "buildpacks": [
     {
       "url": "https://github.com/heroku/heroku-buildpack-apt"
@@ -90,15 +94,16 @@
       "description": "'hours' value for the 'generate-course-certificate' scheduled task (defaults to midnight)",
       "required": false
     },
+    "CRON_DELETE_BASKET_HOURS": {
+      "description": "'hours' value for the 'delete-expired-baskets' scheduled task (defaults to midnight)",
+      "required": false
+    },
     "CRON_EMERITUS_COURSERUN_SYNC_DAYS": {
       "description": "'day_of_week' value for 'sync-emeritus-course-runs' scheduled task (default will run once a day).",
       "required": false
     },
     "CRON_EMERITUS_COURSERUN_SYNC_HOURS": {
       "description": "'hours' value for the 'sync-emeritus-course-runs' scheduled task (defaults to midnight)",
-    },
-    "CRON_DELETE_BASKET_HOURS": {
-      "description": "'hours' value for the 'delete-expired-baskets' scheduled task (defaults to midnight)",
       "required": false
     },
     "CSRF_TRUSTED_ORIGINS": {
@@ -669,7 +674,12 @@
       "required": false
     }
   },
-  "keywords": ["Django", "Python", "MIT", "Office of Digital Learning"],
+  "keywords": [
+    "Django",
+    "Python",
+    "MIT",
+    "Office of Digital Learning"
+  ],
   "name": "mitxpro",
   "repository": "https://github.com/mitodl/mitxpro",
   "scripts": {
