fix: formatting issues

--- a/app.json
+++ b/app.json
@@ -1,9 +1,5 @@
 {
-  "addons": [
-    "heroku-postgresql:standard-0",
-    "newrelic:wayne",
-    "rediscloud:30"
-  ],
+  "addons": ["heroku-postgresql:standard-0", "newrelic:wayne", "rediscloud:30"],
   "buildpacks": [
     {
       "url": "https://github.com/heroku/heroku-buildpack-apt"
@@ -674,12 +670,7 @@
       "required": false
     }
   },
-  "keywords": [
-    "Django",
-    "Python",
-    "MIT",
-    "Office of Digital Learning"
-  ],
+  "keywords": ["Django", "Python", "MIT", "Office of Digital Learning"],
   "name": "mitxpro",
   "repository": "https://github.com/mitodl/mitxpro",
   "scripts": {
