--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@trust/webcrypto": "^0.9.2",
     "autoprefixer": "^9.7.3",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^9.1.0",
     "bootstrap": "^4.4.1",
     "casual-browserify": "^1.5.19-2",
     "chai": "^4.2.0",
@@ -47,7 +47,7 @@
     "eslint-plugin-flowtype": "^4.7.0",
     "eslint-plugin-mocha": "^6.3.0",
     "eslint-plugin-react": "^7.19.0",
-    "expose-loader": "^0.7.5",
+    "expose-loader": "^5.0.0",
     "express": "^4.19.2",
     "fetch-mock": "^5.12.1",
     "flow": "^0.2.3",
@@ -67,7 +67,7 @@
     "nyc": "^15.1.0",
     "object.entries": "^1.0.4",
     "popper.js": "^1.16.0",
-    "postcss-loader": "^2.0.6",
+    "postcss-loader": "^6.1.1",
     "prettier": "^3.0.3",
     "prettier-plugin-django-alpine": "^1.1.1",
     "prop-types": "^15.5.10",
@@ -100,25 +100,25 @@
     "reselect": "^4.0.0",
     "sass": "~1.64.2",
     "sass-lint": "^1.13.1",
-    "sass-loader": "10",
+    "sass-loader": "^12.1.0",
     "serialize-javascript": "^3.1.0",
     "shelljs": "^0.8.3",
     "sinon": "^4.1.3",
     "slick-carousel": "1.8.1",
-    "style-loader": "^0.18.2",
+    "style-loader": "^3.2.1",
     "styled-components": "^4.2.0",
     "stylelint": "^15.10.3",
     "stylelint-config-standard-scss": "^11.0.0",
     "unzipper": "^0.10.1",
     "url-join": "^4.0.0",
-    "url-loader": "^4.1.0",
+    "url-loader": "^4.1.1",
     "waait": "^1.0.4",
-    "webpack": "^4.46.0",
+    "webpack": "^5.76.0",
     "webpack-bundle-analyzer": "^4.6.1",
-    "webpack-bundle-tracker": "^0.4.3",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-middleware": "^5.3.4",
-    "webpack-hot-middleware": "^2.24.3",
+    "webpack-bundle-tracker": "1.4.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-middleware": "^5.0.0",
+    "webpack-hot-middleware": "^2.25.0",
     "yup": "^0.31.0"
   },
   "engines": {
