feat: added a celery task to delete expired basket (#3021)
* feat: added celery  sy scheduler to delete expired basket

* fix: fixed the tests

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* test: added test for the basket delete task

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* fix: formatting issues

* fix: some code cleanup

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* refactor: test

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* fix: tests

* fix: formatting issues

* fix: issues

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* fix: some issues

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* fix: issues

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* fix: logging and test issues

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/app.json
+++ b/app.json
@@ -42,6 +42,10 @@
       "description": "S3 Bucket name.",
       "required": false
     },
+    "BASKET_EXPIRY_DAYS": {
+      "description": "Expiry life span of a basket in days",
+      "required": false
+    },
     "BLOG_CACHE_TIMEOUT": {
       "description": "How long the blog should be cached",
       "required": false
@@ -68,6 +72,14 @@
     },
     "COUPON_REQUEST_SHEET_ID": {
       "description": "ID of the Google Sheet that contains requests for coupons",
+      "required": false
+    },
+    "CRON_BASKET_DELETE_DAYS": {
+      "description": "'days' value for the 'delete-expired-baskets' scheduled task (defaults to everyday)",
+      "required": false
+    },
+    "CRON_BASKET_DELETE_HOURS": {
+      "description": "'hours' value for the 'delete-expired-baskets' scheduled task (defaults to midnight)",
       "required": false
     },
     "CRON_COURSERUN_SYNC_DAYS": {
