--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fancyapps/fancybox": "^3.5.7",
     "@material/layout-grid": "^0.41.0",
     "@material/top-app-bar": "^1.1.1",
+    "@popperjs/core": "^2.11.8",
     "@sentry/browser": "^5.5.0",
     "@trust/webcrypto": "^0.9.2",
     "autoprefixer": "^9.7.3",
