--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "fmt:check": "LOG_LEVEL= prettier --config .prettierrc.json --check ."
   },
   "resolutions": {
+    "cheerio": "1.0.0-rc.12",
     "mixin-deep": "^1.3.2",
     "set-value": "^2.0.1",
     "js-yaml": "^3.13.1",
