--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.12.4"
-          cache: "poetry"
+      #          cache: "poetry"
 
       - name: Install dependencies
         run: poetry install --no-interaction
