--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,8 +49,8 @@ jobs:
         uses: snok/install-poetry@v1
         with:
           version: 1.8.2
-          virtualenvs-create: true
-          virtualenvs-in-project: true
+      #          virtualenvs-create: true
+      #          virtualenvs-in-project: true
 
       - name: Set up Python
         uses: actions/setup-python@v4
