--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,18 +45,18 @@ jobs:
       - name: Apt install
         run: cat Aptfile | sudo xargs apt-get install
 
-      - name: Install poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: 1.8.2
-      #          virtualenvs-create: true
-      #          virtualenvs-in-project: true
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.12.4"
-      #          cache: "poetry"
+          cache: "poetry"
+
+      - name: Install poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: 1.8.2
+          virtualenvs-create: true
+          virtualenvs-in-project: true
 
       - name: Install dependencies
         run: poetry install --no-interaction
