--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,10 +46,10 @@ jobs:
         run: cat Aptfile | sudo xargs apt-get install
 
       - name: Set up Python
+        id: setup-python
         uses: actions/setup-python@v4
         with:
           python-version: "3.12.4"
-          cache: "poetry"
 
       - name: Install poetry
         uses: snok/install-poetry@v1
@@ -57,6 +57,18 @@ jobs:
           version: 1.8.2
           virtualenvs-create: true
           virtualenvs-in-project: true
+          virtualenvs-path: .venv
+
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v4
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Install dependencies
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+        run: poetry install --no-interaction --no-root
 
       - name: Install dependencies
         run: poetry install --no-interaction
@@ -93,6 +105,7 @@ jobs:
 
       - name: Tests
         run: |
+          source .venv/bin/activate
           export MEDIA_ROOT="$(mktemp -d)"
           poetry run ./scripts/test/python_tests.sh
         env:
