--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,7 @@ jobs:
           source .venv/bin/activate
           export MEDIA_ROOT="$(mktemp -d)"
           poetry run ./scripts/test/python_tests.sh
-          pytest --splits 5 --group ${{ matrix.group }}
+          pytest --cov --splits 5 --group ${{ matrix.group }}
         env:
           DEBUG: False
           NODE_ENV: "production"
@@ -144,6 +144,58 @@ jobs:
         with:
           name: coverage${{ matrix.group }}
           file: ./coverage.xml
+
+  coverage:
+    needs: python-tests
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Apt update
+        run: sudo apt-get update -y
+
+      - name: Apt install
+        run: cat Aptfile | sudo xargs apt-get install
+
+      - name: Set up Python
+        id: setup-python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12.5"
+
+      - name: Install poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: 1.8.2
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          virtualenvs-path: .venv
+
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v4
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Install dependencies
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+        run: poetry install --no-interaction --no-root
+
+      - name: Install project
+        run: poetry install --no-interaction
+
+      - name: Download all artifacts
+        # Downloads coverage1, coverage2, etc.
+        uses: actions/download-artifact@v4
+
+      - name: Run coverage
+        run: |
+          coverage combine coverage*/.coverage*
+          coverage report --fail-under=100
+          coverage xml
+
+      - uses: codecov/codecov-action@v4
 
   javascript-tests:
     runs-on: ubuntu-22.04
