--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,7 +76,7 @@ pytest = "^8.0.0"
 pytest-cov = ">=2.6.1"
 pytest-django = "*"
 pytest-env = "*"
-pytest-lazy-fixture = "0.6.3"
+pytest-lazy-fixtures = "*"
 pytest-mock = "*"
 responses = "*"
 ruff = "^0.6.0"
