feat: add posthog integration

--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,6 @@ MITOL_DIGITAL_CREDENTIALS_VERIFY_SERVICE_BASE_URL=http://host.docker.internal:50
 MITOL_DIGITAL_CREDENTIALS_HMAC_SECRET=test-hmac-secret  # pragma: allowlist secret
 
 EMERITUS_API_KEY=fake_api_key
+
+POSTHOG_PROJECT_API_KEY=
+POSTHOG_API_HOST=https://app.posthog.com/
