--- a/pytest.ini
+++ b/pytest.ini
@@ -36,3 +36,4 @@ env =
   SENTRY_DSN=
   WAGTAIL_CACHE_BACKEND=django.core.cache.backends.dummy.DummyCache
   WAGTAIL_CACHE_URL=
+  POSTHOG_ENABLED=True
