--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "object.entries": "^1.0.4",
     "popper.js": "^1.16.0",
     "postcss-loader": "^6.1.1",
+    "posthog-js": "^1.171.0",
     "prettier": "^3.0.3",
     "prettier-plugin-django-alpine": "^1.1.1",
     "prop-types": "^15.5.10",
