--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,9 @@ on: [push]
 jobs:
   python-tests:
     runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        group: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
 
     services:
       db:
@@ -108,6 +111,7 @@ jobs:
           source .venv/bin/activate
           export MEDIA_ROOT="$(mktemp -d)"
           poetry run ./scripts/test/python_tests.sh
+          pytest -vv -n auto --splits 12 --group ${{ matrix.group }}
         env:
           DEBUG: False
           NODE_ENV: "production"
@@ -138,6 +142,7 @@ jobs:
       - name: Upload coverage to CodeCov
         uses: codecov/codecov-action@v4
         with:
+          name: coverage${{ matrix.group }}
           file: ./coverage.xml
 
   javascript-tests:
