--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,8 @@ pytest-django = "*"
 pytest-env = "*"
 pytest-lazy-fixtures = "*"
 pytest-mock = "*"
+pytest-xdist = "*"
+pytest-split = "^0.9.0"
 responses = "*"
 ruff = "^0.7.0"
 safety = "*"
