remove cpus flag

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,7 @@ jobs:
           source .venv/bin/activate
           export MEDIA_ROOT="$(mktemp -d)"
           poetry run ./scripts/test/python_tests.sh
-          pytest -vv -n auto --splits 12 --group ${{ matrix.group }}
+          pytest -n 0 --splits 12 --group ${{ matrix.group }}
         env:
           DEBUG: False
           NODE_ENV: "production"
