--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,6 @@ on: [push]
 jobs:
   python-tests:
     runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        group: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
 
     services:
       db:
@@ -111,7 +108,7 @@ jobs:
           source .venv/bin/activate
           export MEDIA_ROOT="$(mktemp -d)"
           poetry run ./scripts/test/python_tests.sh
-          pytest --cov --splits 12 --group ${{ matrix.group }}
+          pytest --cov -n logical
         env:
           DEBUG: False
           NODE_ENV: "production"
@@ -139,65 +136,10 @@ jobs:
           OPENEDX_API_CLIENT_SECRET: fake_client_secret # pragma: allowlist secret
           SECRET_KEY: local_unsafe_key # pragma: allowlist secret
 
-  # TODO: Upload coverage once codecov account is setup
-  #      - name: Upload coverage to CodeCov
-  #        uses: codecov/codecov-action@v4
-  #        with:
-  #          name: coverage${{ matrix.group }}
-  #          file: ./coverage.xml
-
-  # TODO: Add coverage report once codecov account is setup
-  #  coverage:
-  #    needs: python-tests
-  #    runs-on: ubuntu-22.04
-  #    steps:
-  #      - uses: actions/checkout@v4
-  #
-  #      - name: Apt update
-  #        run: sudo apt-get update -y
-  #
-  #      - name: Apt install
-  #        run: cat Aptfile | sudo xargs apt-get install
-  #
-  #      - name: Set up Python
-  #        id: setup-python
-  #        uses: actions/setup-python@v4
-  #        with:
-  #          python-version: "3.12.6"
-  #
-  #      - name: Install poetry
-  #        uses: snok/install-poetry@v1
-  #        with:
-  #          version: 1.8.2
-  #          virtualenvs-create: true
-  #          virtualenvs-in-project: true
-  #          virtualenvs-path: .venv
-  #
-  #      - name: Load cached venv
-  #        id: cached-poetry-dependencies
-  #        uses: actions/cache@v4
-  #        with:
-  #          path: .venv
-  #          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
-  #
-  #      - name: Install dependencies
-  #        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-  #        run: poetry install --no-interaction --no-root
-  #
-  #      - name: Install project
-  #        run: poetry install --no-interaction
-  #
-  #      - name: Download all artifacts
-  #        # Downloads coverage1, coverage2, etc.
-  #        uses: actions/download-artifact@v4
-  #
-  #      - name: Run coverage
-  #        run: |
-  #          coverage combine coverage*/.coverage*
-  #          coverage report --fail-under=100
-  #          coverage xml
-  #
-  #      - uses: codecov/codecov-action@v4
+      - name: Upload coverage to CodeCov
+        uses: codecov/codecov-action@v4
+        with:
+          file: ./coverage.xml
 
   javascript-tests:
     runs-on: ubuntu-22.04
