--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,7 @@ pytest-django = "*"
 pytest-env = "*"
 pytest-lazy-fixtures = "*"
 pytest-mock = "*"
-pytest-split = "^0.9.0"
+pytest-xdist = "*"
 responses = "*"
 ruff = "^0.7.0"
 safety = "*"
