--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,7 @@ pytest-django = "*"
 pytest-env = "*"
 pytest-lazy-fixtures = "*"
 pytest-mock = "*"
+pytest-xdist = "*"
 responses = "*"
 ruff = "^0.7.0"
 safety = "*"
