--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["local>mitodl/.github:renovate-config"]
+  "extends": ["local>mitodl/.github:renovate-config"],
+  "packageRules": [
+    {
+      "matchPackages": ["sass"],
+      "automerge": false
+    }
+  ]
 }
