--- a/app.json
+++ b/app.json
@@ -98,12 +98,12 @@
       "description": "'hours' value for the 'generate-course-certificate' scheduled task (defaults to midnight)",
       "required": false
     },
-    "CRON_EMERITUS_COURSERUN_SYNC_DAYS": {
-      "description": "'day_of_week' value for 'sync-emeritus-course-runs' scheduled task (default will run once a day).",
+    "CRON_EXTERNAL_COURSERUN_SYNC_DAYS": {
+      "description": "'day_of_week' value for 'sync-external-course-runs' scheduled task (default will run once a day).",
       "required": false
     },
-    "CRON_EMERITUS_COURSERUN_SYNC_HOURS": {
-      "description": "'hours' value for the 'sync-emeritus-course-runs' scheduled task (defaults to midnight)",
+    "CRON_EXTERNAL_COURSERUN_SYNC_HOURS": {
+      "description": "'hours' value for the 'sync-external-course-runs' scheduled task (defaults to midnight)",
       "required": false
     },
     "CSRF_TRUSTED_ORIGINS": {
@@ -234,20 +234,20 @@
       "description": "Timeout (in seconds) for requests made via the edX API client",
       "required": false
     },
+    "ENROLLMENT_CHANGE_SHEET_ID": {
+      "description": "ID of the Google Sheet that contains the enrollment change request worksheets (refunds, transfers, etc)",
+      "required": false
+    },
     "EXTERNAL_COURSE_SYNC_API_BASE_URL": {
-      "description": "Base API URL for Emeritus API",
+      "description": "Base API URL for external course sync API",
       "required": false
     },
     "EXTERNAL_COURSE_SYNC_API_KEY": {
-      "description": "The API Key for Emeritus API",
+      "description": "The API Key for external course sync API",
       "required": true
     },
-    "EMERITUS_API_TIMEOUT": {
-      "description": "API request timeout for Emeritus APIs in seconds",
-      "required": false
-    },
-    "ENROLLMENT_CHANGE_SHEET_ID": {
-      "description": "ID of the Google Sheet that contains the enrollment change request worksheets (refunds, transfers, etc)",
+    "EXTERNAL_COURSE_SYNC_API_REQUEST_TIMEOUT": {
+      "description": "API request timeout for external course sync APIs in seconds",
       "required": false
     },
     "GA_TRACKING_ID": {
