--- a/app.json
+++ b/app.json
@@ -234,20 +234,20 @@
       "description": "Timeout (in seconds) for requests made via the edX API client",
       "required": false
     },
-    "EMERITUS_API_BASE_URL": {
+    "ENROLLMENT_CHANGE_SHEET_ID": {
+      "description": "ID of the Google Sheet that contains the enrollment change request worksheets (refunds, transfers, etc)",
+      "required": false
+    },
+    "EXTERNAL_COURSE_SYNC_API_BASE_URL": {
       "description": "Base API URL for Emeritus API",
       "required": false
     },
-    "EMERITUS_API_KEY": {
-      "description": "The API Key for Emeritus API",
+    "EXTERNAL_COURSE_SYNC_API_KEY": {
+      "description": "The API Key for EXTERNAL_COURSE_SYNC API",
       "required": true
     },
-    "EMERITUS_API_TIMEOUT": {
+    "EXTERNAL_COURSE_SYNC_API_TIMEOUT": {
       "description": "API request timeout for Emeritus APIs in seconds",
-      "required": false
-    },
-    "ENROLLMENT_CHANGE_SHEET_ID": {
-      "description": "ID of the Google Sheet that contains the enrollment change request worksheets (refunds, transfers, etc)",
       "required": false
     },
     "GA_TRACKING_ID": {
@@ -430,6 +430,10 @@
       "description": "The email backend to use for application emails",
       "required": false
     },
+    "MITXPRO_OAUTH_PROVIDER": {
+      "description": "Social auth oauth provider backend name",
+      "required": false
+    },
     "MITXPRO_REGISTRATION_ACCESS_TOKEN": {
       "description": "Access token to secure Open edX registration API with",
       "required": false
@@ -488,6 +492,10 @@
     },
     "OPENEDX_SERVICE_WORKER_USERNAME": {
       "description": "Username of the user whose token has been set in OPENEDX_SERVICE_WORKER_API_TOKEN",
+      "required": false
+    },
+    "OPENEDX_SOCIAL_LOGIN_PATH": {
+      "description": "Open edX social auth login url",
       "required": false
     },
     "OPENEDX_TOKEN_EXPIRES_HOURS": {
