chore: change backend name (#3327)
* chore: change backend name

* fix: tests

* config: add MITXPRO_OAUTH_PROVIDER and OPENEDX_SOCIAL_LOGIN_PATH in env

* fix: settings

* fix: settings

* fix: settings

* config: rename MITXPRO_OAUTH_PROVIDER to OPENEDX_OAUTH_PROVIDER

* chore: removed configure_open_edx.md

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/app.json
+++ b/app.json
@@ -482,12 +482,20 @@
       "description": "The 'name' value for the Open edX OAuth Application",
       "required": true
     },
+    "OPENEDX_OAUTH_PROVIDER": {
+      "description": "Social auth oauth provider backend name",
+      "required": false
+    },
     "OPENEDX_SERVICE_WORKER_API_TOKEN": {
       "description": "Active access token with staff level permissions to use with OpenEdX API client for service tasks",
       "required": false
     },
     "OPENEDX_SERVICE_WORKER_USERNAME": {
       "description": "Username of the user whose token has been set in OPENEDX_SERVICE_WORKER_API_TOKEN",
+      "required": false
+    },
+    "OPENEDX_SOCIAL_LOGIN_PATH": {
+      "description": "Open edX social auth login url",
       "required": false
     },
     "OPENEDX_TOKEN_EXPIRES_HOURS": {
