feat: add Global Alumni in external course sync (#3330)
* feat: add Global Alumni in external course sync

* refactor: made code generic and adjusted tests

* refactor: added sync_daily in platform and refactored courses/task.py to be more generic

* fix: test

* fix: some issues

* fix: some issues

* fix: some issues

* fix: issues after rebase

* fix: some issues

* fix: some issues

* fix: pre-commit issues

* fix: issues

* fix: tests

* test: add GA tests

* fix: issues

* fix: tests

* fix: tests

---------

Co-authored-by: Asad Ali <asad.ali@arbisoft.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,7 +117,7 @@ jobs:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres # pragma: allowlist secret
           WEBPACK_DISABLE_LOADER_STATS: "True"
           ELASTICSEARCH_URL: localhost:9200
-          EMERITUS_API_KEY: fake_emeritus_api_key # pragma: allowlist secret
+          EXTERNAL_COURSE_SYNC_API_KEY: fake_external_course_sync_api_key # pragma: allowlist secret
           MAILGUN_KEY: fake_mailgun_key
           MAILGUN_SENDER_DOMAIN: other.fake.site
           MITOL_DIGITAL_CREDENTIALS_VERIFY_SERVICE_BASE_URL: http://localhost:5000
