--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.3.4",
+    "@babel/eslint-parser": "^7.26.8",
     "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
@@ -18,7 +19,7 @@
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.5.5",
-    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-flow": "^7.25.9",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@fancyapps/fancybox": "^3.5.7",
@@ -26,8 +27,9 @@
     "@material/top-app-bar": "^1.1.1",
     "@sentry/browser": "^7.0.0",
     "@trust/webcrypto": "^0.9.2",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
     "autoprefixer": "^9.7.3",
-    "@babel/eslint-parser": "^7.11.0",
     "babel-loader": "^9.1.0",
     "bootstrap": "^4.4.1",
     "casual-browserify": "^1.5.19-2",
@@ -38,13 +40,13 @@
     "decimal.js-light": "^2.5.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
-    "eslint": "^7.0.0",
+    "eslint": "8.56.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-mitodl": "^0.0.7",
+    "eslint-config-mitodl": "^2.1.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-flow-vars": "^0.5.0",
-    "eslint-plugin-flowtype": "^4.7.0",
+    "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-mocha": "^6.3.0",
     "eslint-plugin-react": "^7.19.0",
     "expose-loader": "^5.0.0",
@@ -147,5 +149,8 @@
     "minimist": "1.2.8",
     "merge": "^2.1.1",
     "normalize-url": "^8.0.0"
+  },
+  "devDependencies": {
+    "eslint-plugin-react-hooks": "^5.2.0"
   }
 }
