--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,7 +138,7 @@ jobs:
       - name: Upload coverage to CodeCov
         uses: codecov/codecov-action@ad3126e916f78f00edff4ed0317cf185271ccc2d # v5
         with:
-          file: ./coverage.xml
+          files: ./coverage.xml
 
   javascript-tests:
     runs-on: ubuntu-22.04
@@ -188,4 +188,4 @@ jobs:
       - name: Upload test coverage to CodeCov
         uses: codecov/codecov-action@ad3126e916f78f00edff4ed0317cf185271ccc2d # v5
         with:
-          file: coverage/lcov.info
+          files: coverage/lcov.info
