--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ django-filter = "^23.4"
 django-hijack = "3.7.4"
 django-ipware = "7.0.1"
 django-oauth-toolkit = "1.7.1"
-django-redis = "5.4.0"
+django-redis = "^6.0.0"
 django-robots = "6.1"
 django-silk = "^5.0.3"
 django-storages = "1.14.6"
@@ -37,7 +37,7 @@ google-auth = "1.35.0"
 hubspot-api-client = "^6.1.0"
 ipython = "^9.0.0"
 mitol-django-authentication = "2023.12.19"
-mitol-django-common = "2025.6.20"
+mitol-django-common = "2025.8.1"
 mitol-django-digital-credentials = "2023.12.19"
 mitol-django-hubspot-api = { version = "2023.12.19", extras = [] }
 mitol-django-mail = "2025.6.24"
