--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 packages = []
 
 [tool.poetry.dependencies]
-python = "3.13.7"
+python = "^3.13"
 
 Pillow = "10.4.0"
 PyNaCl = "1.6.0"
