fix: remove unnecessary pin

--- a/package.json
+++ b/package.json
@@ -146,8 +146,7 @@
     "kind-of": "6.0.3",
     "minimist": "1.2.8",
     "merge": "^2.1.1",
-    "normalize-url": "^8.0.0",
-    "baseline-browser-mapping": "2.9.9"
+    "normalize-url": "^8.0.0"
   },
   "devDependencies": {
     "eslint-plugin-react-hooks": "^5.2.0"
